--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/dist/css/main.css" />
   </head>
   <body>
@@ -15,18 +21,129 @@
       </header>
       <section class="hero">
         <div class="hero--left">
-          <div class="hero__heading">
-            <!-- <p>We need to act while we Still can</p> -->
-          </div>
           <div class="hero-video__wrapper">
-            <div class="hamburger"></div>
+            <div class="hero__heading">
+              <span class="hero__heading--1">We need to act</span>
+              <span class="hero__heading--2">while we</span>
+              <span class="hero__heading--3">Still can</span>
+            </div>
+            <video autoplay muted loop src="./media/video/hero-video.mp4"></video>
+            <div class="hamburger">
+              <svg
+                width="40px"
+                height="54px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                stroke="#ffe3ff"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M20 7L4 7"
+                    stroke="#ffe3ff"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  ></path>
+                  <path
+                    d="M20 12L4 12"
+                    stroke="#ffe3ff"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  ></path>
+                  <path
+                    d="M20 17L4 17"
+                    stroke="#ffe3ff"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  ></path>
+                </g>
+              </svg>
+            </div>
           </div>
         </div>
         <div class="hero--right">
-          <div class="card card--blue">AMPLIFY HOME TRUTHS</div>
-          <div class="card card--pink">AMPLIFY HOME TRUTHS</div>
-          <div class="card card--green">AMPLIFY HOME TRUTHS</div>
-        </div>
+          <div class="card card--blue">
+            <div class="arrow">
+              <svg
+                width="81px"
+                height="81px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(45)"
+              >
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="card-text">
+              <p>AMPLIFY</p>
+              <p>Home</p>
+              <p>Truths</p>
+            </div>
+          </div>
+          <div class="card card--pink">
+            <div class="arrow">
+              <svg
+                width="81px"
+                height="81px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(45)"
+              >
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="card-text">
+              <p>AMPLIFY's</p>
+              <p>Work</p>
+            </div>
+          </div>
+          <div class="card card--green">
+            <div class="arrow">
+              <svg
+                width="81px"
+                height="81px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(45)"
+              >
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="card-text">
+              <p>AMPLIFY</p>
+              <p>Newsroom</p>
+            </div>
+          </div>
       </section>
     </main>
   </body>
