--- a/index.html
+++ b/index.html
@@ -145,6 +145,95 @@
             </div>
           </div>
       </section>
+      <section class="text-section">
+        <div class="text-section__inner">
+          <h2>71% of Australians agree that the Australian promise has been broken.</h2>
+          <p>For decades Australians have enjoyed a <span class="highlighter highlighter--up">rising</span> standard of living, the expectation of a<span class="highlighter"> fair go</span> for all, and a belief that the next generation would enjoy<span class="highlighter highlighter--up"> greater opportunity</span> than the last.</p>
+          <p>The promise to Australians has been <span class="highlighter highlighter--down">broken</span>.</p>
+          <p>AMPLIFY brings Australians together to confront <br><span class="highlighter highlighter--down"> hard truths</span>, shape bold <span class="highlighter highlighter--up">solutions</span>, and advocate for <span class="highlighter highlighter--up">change </span>to rebuild the promise — <span class="highlighter highlighter--up">while we still can.</span></p>
+        </div>
+      </section>
+      <section class="card-trio">
+        <div class="card-trio__heading">
+          <h2>Take action with AMPLIFY</h2>
+        </div>
+        <div class="card card--blue">
+            <div class="arrow">
+              <svg
+                width="81px"
+                height="81px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(45)"
+              >
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="card-text">
+              <p>AMPLIFY</p>
+              <p>Home</p>
+              <p>Truths</p>
+            </div>
+        </div>
+        <div class="card card--pink">
+            <div class="arrow">
+              <svg
+                width="81px"
+                height="81px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(45)"
+              >
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="card-text">
+              <p>AMPLIFY's</p>
+              <p>Work</p>
+            </div>
+        </div>
+        <div class="card card--green">
+            <div class="arrow">
+              <svg
+                width="81px"
+                height="81px"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                transform="rotate(45)"
+              >
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="card-text">
+              <p>AMPLIFY</p>
+              <p>Newsroom</p>
+            </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
