till card rotation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <main class="wrapper">
+      <div class="sticky-wrapper">
       <header>
         <nav>
           <p>AMPLIFY</p>
@@ -153,6 +154,7 @@
           <p>AMPLIFY brings Australians together to confront <br><span class="highlighter highlighter--down"> hard truths</span>, shape bold <span class="highlighter highlighter--up">solutions</span>, and advocate for <span class="highlighter highlighter--up">change </span>to rebuild the promise — <span class="highlighter highlighter--up">while we still can.</span></p>
         </div>
       </section>
+      </div>
       <section class="card-trio">
         <div class="card-trio__heading">
           <h2>Take action with AMPLIFY</h2>
@@ -235,6 +237,102 @@
           </div>
         </div>
       </section>
+      <section class="people-section">
+        <div class="people-section--heading">
+          <h2>Meet a few of our community members</h2>        
+        </div>
+        <div class="people__container">
+          <div class="people__card people__card--1">
+            <div class="people__card--inner">
+              <div class="people__card--front">
+                <img src="./media/img/tonia_krebs.png" alt="photo" class="people__card--image">
+              </div>
+              <div class="people__card--back">
+                <h3>Tonia Krebs</h3>
+                <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+              </div>
+            </div>
+          </div>
+          <div class="people__card people__card--2">
+            <div class="people__card--inner">
+                        <div class="people__card--front">
+                            <img src="./media/img/jim_hardy.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Jim Hardy</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people__card people__card--3">
+                    <div class="people__card--inner">
+                        <div class="people__card--front">
+                            <img src="./media/img/affine_lai.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Affine Lai</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people__card people__card--4">
+                    <div class="people__card--inner">
+                        <div class="people__card--front">
+                             <img src="./media/img/bradley_walker.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Bradley Walker</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people__card people__card--5">
+                    <div class="people__card--inner">
+                        <div class="people__card--front">
+                            <img src="./media/img/mukund_rajesh.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Mukund Rajesh</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people__card people__card--6">
+                    <div class="people__card--inner">
+                         <div class="people__card--front">
+                            <img src="./media/img/ann_uldridge.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Ann Uldridge</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people__card people__card--7">
+                    <div class="people__card--inner">
+                        <div class="people__card--front">
+                            <img src="./media/img/callan_hutchinson.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Callan Hutchinson</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people__card people__card--8">
+                     <div class="people__card--inner">
+                        <div class="people__card--front">
+                             <img src="./media/img/mace_james.png" alt="photo" class="people__card--image">
+                        </div>
+                        <div class="people__card--back">
+                            <h3>Mace James</h3>
+                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                        </div>
+                    </div>
+                </div>
+        </div>
+      </section>
+ 
     </main>
   </body>
 </html>
