--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Jim Hardy</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I am a retired community banker who firsthand has seen how private-sector inspired action makes a REAL difference. Government alone can't solve the myriads of structural solutions required for this fundamental economic issue."</p>
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Affine Lai</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I joined AMPLIFY to highlight the urgency and impact of the housing crisis on the Australian community and challenge misconceptions of homelessness. I believe a more compassionate &amp; collaborative approach at innovating systemic reform is key in creating a fairer, more accessible housing sector for all."</p>
                         </div>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Bradley Walker</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I'm a Bundjalung man from the Northern Rivers, community leader and advocate for the homeless. I joined AMPLIFY to hold the government accountable, and make sure people don't experience discrimination in housing like I've experienced."</p>
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Mukund Rajesh</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I'm a law professional, PhD candidate and aspiring social worker, passionate about bridging the gap between policy design and real world impact. Being part of AMPLIFY gives me the chance to help solve issues through practical, community-oriented solutions and to ensure that every voice is heard in shaping housing reform."</p>
                         </div>
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Ann Uldridge</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I'm an ICT professional with 30 years' experience across industries. I co-founded Women in Technology (QLD). I joined AMPLIFY because advancing affordable, secure housing for rural and regional women is important to me."</p>
                         </div>
                     </div>
                 </div>
@@ -315,7 +315,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Callan Hutchinson</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I'm a husband & father, and I'm involved in a small family business. I'm also a renter growing frustrated by the lack of action on housing affordability, and tax reform where experts are seemingly ignored. I joined AMPLIFY because I felt existing structures mute the voices of ordinary people."</p>
                         </div>
                     </div>
                 </div>
@@ -326,7 +326,7 @@
                         </div>
                         <div class="people__card--back">
                             <h3>Mace James</h3>
-                            <p>"As a property professional and financial wellbeing advocate, I want to see practical, data-driven strategies that improve affordability, increase occupancy, and deliver sustainable homes through collaboration between community, government and industry."</p>
+                            <p>"I know first hand how long-term barriers to renting and home ownership can have a huge impact on one's life - AMPLIFY has helped give me a platform to advocate for change for those in situations similar to my own."</p>
                         </div>
                     </div>
                 </div>
