--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="/dist/css/main.css" />
   </head>
   <body>
@@ -333,6 +335,46 @@
         </div>
       </section>
  
+      <!-- page 5 -->
+      <section class="how-we-work">
+        <div class="text-wrapper">
+          <h2>
+            How we work
+          </h2>
+          <div class="content">
+            <p>The promise to Australians has been broken. AMPLIFY's work elevates the community's voice, building political courage to act and rebuild that promise - while we still can.</p>
+            <a href="#">
+              <p>Explore</p>
+              <svg width="64px" height="64px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(-45)matrix(1, 0, 0, -1, 0, 0)">
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                <g id="SVGRepo_iconCarrier"> 
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M12 3C12.2652 3 12.5196 3.10536 12.7071 3.29289L19.7071 10.2929C20.0976 10.6834 20.0976 11.3166 19.7071 11.7071C19.3166 12.0976 18.6834 12.0976 18.2929 11.7071L13 6.41421V20C13 20.5523 12.5523 21 12 21C11.4477 21 11 20.5523 11 20V6.41421L5.70711 11.7071C5.31658 12.0976 4.68342 12.0976 4.29289 11.7071C3.90237 11.3166 3.90237 10.6834 4.29289 10.2929L11.2929 3.29289C11.4804 3.10536 11.7348 3 12 3Z" fill="#831672"></path>
+                </g>
+              </svg>
+            </a>
+          </div>
+          <div class="rounded-boxes">
+            <div class="rounded-box">
+              <h3>Seek <i class="fa fa-search"></i></h3>
+              <p>We seek out the best evidence-based reforms from leading experts around the world to the issues that are most important to the Australian community.</p>
+            </div>
+            <div class="rounded-box">
+              <h3>Solve <i class="fa fa-lightbulb-o"></i></h3>
+              <p>We empower the community to find solutions, using cutting edge tools to debate, deliberate and build consensus.</p>
+            </div>
+            <div class="rounded-box">
+              <h3>Spark <i class="fa fa-gear"></i></h3>
+              <p>We spark the change the community wants to see by advocating to those with the power to make change happen.  </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- page 6 -->
+      <section class="pic-section">
+        <img src="./media//img//background.jpg" alt="background">
+      </section>
     </main>
   </body>
 </html>
