--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
       <!-- page 6 -->
       <section class="pic-section">
         <img src="./media//img//background.jpg" alt="background">
+        <figcaption>Australia's first National AMPLIFICATION on Housing, February 2025</figcaption>
       </section>
     </main>
   </body>
