page 8 carousel final

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <figcaption>Australia's first National AMPLIFICATION on Housing, February 2025</figcaption>
       </section>
 
-      <section class="our-work">
+      <section name="our-work" class="our-work">
         <h2>Our work</h2>
         <div class="space"></div>
         <div class="feature-card">
@@ -409,6 +409,76 @@
                 </svg>
           </div>
         </div>
+      </section>
+
+      <section name="in-the-news" class="news-section">
+        <h2>In the news</h2>
+        <div class="carousel">
+          <div class="group">
+            <div class="news-card news-card--pink">
+              <div class="heading">
+                <p>In the news</p>
+                <p>August 27, 2024</p>
+              </div>
+              <div class="content">
+                <div class="heading">THE AUSTRALIAN</div>
+                <p>Venture capitalist teams up with CBA for next big project - democracy</p>
+              </div>
+            </div>
+            <div class="news-card news-card--blue">
+              <div class="heading">
+                <p>In the news</p>
+                <p>August 27, 2024</p>
+              </div>
+              <div class="content">
+                <div class="heading">THE AUSTRALIAN</div>
+                <p>Venture capitalist teams up with CBA for next big project - democracy</p>
+              </div>
+            </div>
+            <div class="news-card news-card--green">
+              <div class="heading">
+                <p>In the news</p>
+                <p>August 27, 2024</p>
+              </div>
+              <div class="content">
+                <div class="heading">THE AUSTRALIAN</div>
+                <p>Venture capitalist teams up with CBA for next big project - democracy</p>
+              </div>
+            </div>
+          </div>
+          <div class="group">
+            <div class="news-card news-card--pink">
+              <div class="heading">
+                <p>In the news</p>
+                <p>August 27, 2024</p>
+              </div>
+              <div class="content">
+                <p>THE AUSTRALIAN</p>
+                <p>Venture capitalist teams up with CBA for next big project - democracy</p>
+              </div>
+            </div>
+            <div class="news-card news-card--blue">
+              <div class="heading">
+                <p>In the news</p>
+                <p>August 27, 2024</p>
+              </div>
+              <div class="content">
+                <div class="heading">THE AUSTRALIAN</div>
+                <p>Venture capitalist teams up with CBA for next big project - democracy</p>
+              </div>
+            </div>
+            <div class="news-card news-card--green">
+              <div class="heading">
+                <p>In the news</p>
+                <p>August 27, 2024</p>
+              </div>
+              <div class="content">
+                <div class="heading">THE AUSTRALIAN</div>
+                <p>Venture capitalist teams up with CBA for next big project - democracy</p>
+              </div>
+            </div>
+          </div>                  
+        </div> 
       </section>
     </main>
   </body>
