--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
         <figcaption>Australia's first National AMPLIFICATION on Housing, February 2025</figcaption>
       </section>
 
+      <!-- page 7 -->
       <section name="our-work" class="our-work">
         <h2>Our work</h2>
         <div class="space"></div>
@@ -411,6 +412,7 @@
         </div>
       </section>
 
+      <!-- page 8 -->
       <section name="in-the-news" class="news-section">
         <h2>In the news</h2>
         <div class="carousel">
@@ -480,6 +482,40 @@
           </div>                  
         </div> 
       </section>
+
+      <!-- footer -->
+      <footer>
+        <div class="footer-wrapper">
+          <div class="text-wrap">
+            <div class="left">
+              <h4>Join the conversation</h4>
+              <div class="links">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </div>
+              <p>hello@amplifyus.org</p>
+              <p>1300 267 287</p>
+              <p>Amplify PO Box Q76 QVB NSW 1230</p>
+            </div>
+            <div class="right">
+              <div class="social-links">
+                <p>We acknowledge the traditional owners and custodians of country throughout Australia and acknowledge their continuing connection to land, waters and community. We pay our respects to the people, the cultures and the elders past, present and emerging. AMPLIFY builds on more than ten thousand years of collective decision-making and governance by First Nations peoples.</p>
+              </div>
+            </div>
+          </div>
+          <div class="text-bottom">
+            <p>© 2026 AMPLIFY Pty Ltd</p>
+            <div class="links">
+              <a href="#">Privacy</a>
+              <a href="#">Terms</a>
+              <a href="#">Website by Paras</a>
+            </div>
+          </div>
+        </div>
+        <img src="./media/img/footer.png" alt="footer">
+      </footer>
     </main>
   </body>
 </html>
