header title change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="sticky-wrapper">
       <header>
         <nav>
-          <p>AMPLIFY</p>
+          <img src="./media/img/header.png" alt="header-logo">
+          <!-- <p>AMPLIFY</p> -->
         </nav>
       </header>
       <section class="hero">
