--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li><a href="#" class="menu__item">About</a></li>
               <li><a href="#" class="menu__item">Contacts</a></li>
               <a class="close" href="#">
-                <span class="material-icons">
+                <span>
                   X
                 </span>
               </a>
@@ -99,7 +99,7 @@
                     fill-rule="evenodd"
                     clip-rule="evenodd"
                     d="M12 3C12 3 12 3 12 3L19 10C20 10 20 11 19 11C19 12 18 12 18 11L13 6V20C13 20 12 21 12 21C11 21 11 20 11 20V6L5 11C5 12 4 12 4 11C3 11 3 10 4 10L11 3C11 3 11 3 12 3Z"
-                    fill="currentColor"
+                    fill="currentColor" 
                   ></path>
                 </g>
               </svg>
@@ -425,14 +425,13 @@
       
       <!-- page 6 -->
       <section class="pic-section">
-        <img src="https://cdn.prod.website-files.com/68b89f4012e125bcdfe2c948/68fade1c285768dce334e863_amp.png" alt="background">
+        <img src="./media/img/tooltip.png" alt="background">
         <figcaption>Australia's first National AMPLIFICATION on Housing, February 2025</figcaption>
       </section>
 
       <!-- page 7 -->
       <section name="our-work" class="our-work">
         <h2>Our work</h2>
-        <div class="space"></div>
         <div class="feature-card">
           <div class="feature-card__image">
             <img class="feature-card__image--img" src="./media/img/insight-card.webp" alt="photo">
@@ -443,6 +442,7 @@
           </div>
           <div class="arrow">
             <p>Learn More</p>
+            <div class="down-arrow">
                 <svg
                   width="81px"
                   height="81px"
@@ -460,6 +460,7 @@
                     ></path>
                   </g>
                 </svg>
+            </div>
           </div>
         </div>
       </section>
@@ -566,6 +567,11 @@
             </div>
           </div>
         </div>
+        <div class="footer-bottom">
+          <div class="footer-bottom__heading">AMPLIFY</div>
+        </div>
+        <div class="footer-yellow">
+          <p class="footer-yellow__text">Bolder Action on Housing</p></div>
       </footer>
     </main>
   </body>
